--- a/ecs/index.html
+++ b/ecs/index.html
@@ -12,7 +12,7 @@
   	<h1>ECS Projects</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | 2 | 3</h3>
+    <h3><a href="../index.html">Home</a> | <a href="index.html">ECS</a> | <a href="../soccer/index.html">soccer</a></h3>
   </div>
   <div class="content">
 	  My ECS Projects
