--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<h1>Maddies ECS portfolio</h1>
   </div>
   <div class="nav">
-    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="soccer/index.html">ECS</a></h3>
+    <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="soccer/index.html">soccer</a></h3>
   </div>
   <div class="content">
 	 <img src="images/scoccer.png" alt="Welcome" width="960" height="500">
