--- a/soccer/index.html
+++ b/soccer/index.html
@@ -12,7 +12,7 @@
   	<h1>soccer</h1>
   </div>
   <div class="nav">
-    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href=".index.html">soccer</a></h3>
+    <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">soccer</a></h3>
   </div>
   <div class="content">
 	  MESSI IS GOAT I LOVE NEYMAR GO PSG  there is no way a beeshould be able to fly.Its wings are too small to geits fat little body off the ground.The bee, of course, flies anywaybecause bees don't carewhat humans think is impossible.
