--- a/soccer/index.html
+++ b/soccer/index.html
@@ -15,7 +15,19 @@
     <h3><a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">soccer</a></h3>
   </div>
   <div class="content">
-	  MESSI IS GOAT I LOVE NEYMAR GO PSG  there is no way a beeshould be able to fly.Its wings are too small to geits fat little body off the ground.The bee, of course, flies anywaybecause bees don't carewhat humans think is impossible.
+	  MESSI IS GOAT I LOVE NEYMAR GO PSG  there is no way a beeshould A rise motto can inspire us to pursue our goals with vigor and determination. It is a statement that reflects our values and aspirations, reminding us to stay focused on our dreams and work hard towardthem. A rise motto can be personal or collective, and it can be simple or complex, but it should always resonate with our deepest desires.
+
+The concept of rising up is rooted in the human spirit. Throughout history, people have risen to overcome adversity, to fight for their rights, and to achieve their dreams. We all have the potential to rise up, to elevate ourselves to greater heights, and to make our mark on the world. It is not an easy path, but it is a path that is worth taking.
+
+A rise motto should reflect our individuality, and the unique path we are on. It should encourage us to believe in ourselves, to take risks, and to keep moving forward. It should remind us that setbacks and failures are part of the journey, and that we can always rise above them.
+
+One example of a rise motto is "Never Give Up." This simple statement reminds us to keep going, even when things get tough. It is a reminder that success is not always immediate, and that it takes time, effort, and perseverance to achieve our goals. When we face challenges, we can draw on the strength of our motto, and keep pushing forward.
+
+Another example of a rise motto is "Believe in Yourself." This statement is a powerful reminder that we are capable of achieving great things. When we doubt ourselves, we limit our potential. When we believe in ourselves, we open ourselves up to new possibilities and opportunities.
+
+A rise motto can also be a collective statement, reminding us of our shared goals and aspirations. For example, a team might adopt the motto "Together We Rise." This statement reflects the team's commitment to working together, supporting each other, and achieving their goals as a group.
+
+In conclusion, a rise motto is a powerful tool that can inspire us to achieve our dreams, overcome obstacles, and live our best lives. It is a statement that reflects our values and aspirations, reminding us to stay focused on what truly matters. Whatever our individual or collective rise motto may be, let it serve as a source of inspiration and motivation, propelling us forward on our journey towards success.be able to fly.Its wings are too small to geits fat little body off the ground.The bee, of course, flies anywaybecause bees don't carewhat humans think is impossible.
 </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2021</h4>
