--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="soccer/index.html">soccer</a></h3>
   </div>
   <div class="content">
-	 <img src="images/scoccer.png" alt="Welcome" width="960" height="500">
+	 <img src="images/parrot.png" alt="Welcome" width="960" height="500">
 </div>
   <div class="footer">
     <h4>About Me | Contact | Copyright 2023</h4>
