--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	 <img src="images/parrot.png" alt="Welcome" width="960" height="500">
 </div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2023</h4>
+     <h4> <a href="aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
   </div>
 </div>
 </body>
