--- a/soccer/index.html
+++ b/soccer/index.html
@@ -30,7 +30,7 @@ A rise motto can also be a collective statement, reminding us of our shared goal
 In conclusion, a rise motto is a powerful tool that can inspire us to achieve our dreams, overcome obstacles, and live our best lives. It is a statement that reflects our values and aspirations, reminding us to stay focused on what truly matters. Whatever our individual or collective rise motto may be, let it serve as a source of inspiration and motivation, propelling us forward on our journey towards success.be able to fly.Its wings are too small to geits fat little body off the ground.The bee, of course, flies anywaybecause bees don't carewhat humans think is impossible.
 </div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
+     <h4> <a href="../aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
   </div>
 </div>
 </body>
