--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,7 +18,7 @@
 	  My ECS Projects
 </div>
   <div class="footer">
-    <h4>About Me | Contact | Copyright 2021</h4>
+    <h4> <a href="../aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
   </div>
 </div>
 </body>
