--- a/aboutme.html
+++ b/aboutme.html
@@ -15,12 +15,13 @@
     <h3><a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="soccer/index.html">soccer</a></h3>
   </div>
   <div class="content">
-	Soccer
-    Sports and Etertainment marketing state certification
-    child development state certification
-    Started my own swim lesson business
-    member of national charity league 
-    
+	<h3>SKILLS</h3>
+	  <ol>
+	 <li>participates in competitive soccer</li>
+	 <li>Sports and Etertainment marketing state certification</li>
+   	<li>child development state certification</li>
+   	 <li>Started my own swim lesson busines </li>
+    <li>  member of national charity league  </li> 
 </div>
   <div class="footer">
     <h4> <a href="aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
