--- a/soccer/index.html
+++ b/soccer/index.html
@@ -26,7 +26,7 @@
 </div>
   <div class="footer">
      <h4> <a href="../aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
-  </div>
+  </div> <img src="images/neymar.jpeg" alt="neymar" width="960" height="500">
 </div>
 </body> 
 </html>
