--- a/soccer/index.html
+++ b/soccer/index.html
@@ -23,10 +23,11 @@
 	  the field. Soccer is not only a sport, but it also serves as a medium for cultural exchange and social interaction. 
 	  The World Cup, held every four years, is one of the most significant sporting events in the world and brings together people 
 	  from all over the globe to celebrate the sport of soccer. 
+	  <img src="images/neymar.jpeg" alt="Soccer" width="960" height="500">
 </div>
   <div class="footer">
      <h4> <a href="../aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
-  </div> <img src="images/neymar.jpeg" alt="neymar" width="960" height="500">
+  </div> 
 </div>
 </body> 
 </html>
