--- a/soccer/index.html
+++ b/soccer/index.html
@@ -16,8 +16,8 @@
   </div>
   <div class="content">
 	<p>Soccer, also known as football in many parts of the world, is a global sport that is loved and played by millions of people. 
-	  It is a team sport played between two teams, with each team consisting of eleven players. 
-	  The objective of the game is to score more goals than the opposing team. 
+	  It is a team sport played between two teams, with each team consisting of eleven players. </p>
+	 <p> The objective of the game is to score more goals than the opposing team. 
 	  Soccer is a highly skilled game that requires speed, agility, coordination, and strategic thinking. 
 	  The game is played on a rectangular field with a goal at each end, and the players use their feet to kick the ball and maneuver it across 
 	  the field. Soccer is not only a sport, but it also serves as a medium for cultural exchange and social interaction. 
