--- a/soccer/index.html
+++ b/soccer/index.html
@@ -37,7 +37,7 @@
 		  won multiple individual awards, including the FIFA World Cup
 		  Best Young Player award in 2014. Off the pitch, he is known for his philanthropy and 
 		  advocacy work, particularly for underprivileged children in Brazil. </p>
- <img src="../images/mns.webp" alt="Soccer" width="960" height="500">
+ <img src="../images/mns.jpeg" alt="Soccer" width="960" height="500">
 </div>
   <div class="footer">
      <h4> <a href="../aboutme.html">About Me</a>|<a href="mailto:maddieleef26@gmail.com">Contact</a> | Copyright 2023</h4>
