--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,7 +18,7 @@
 	 
 <h3>ECS Project Links</h3>
 	 		 <ul>
-	 <li>Typing Test Results- 69 on typing test.com</li>
+	 <li>Typing Test Results- 69 on typing test.com</li> <img src="../images/code.png" alt="code.png" width="960" height="500">
 	 <li>AI project|<a href="concrete.pdf">PDF</a> | <a href="concrete.pptx">PPTX</a> </li>
 	 <li>Coding Projects</li>
 	 <li> Certifications</li>
