--- a/ecs/index.html
+++ b/ecs/index.html
@@ -23,7 +23,7 @@
 			 <li>AI project|<a href="concrete.pdf">PDF</a> | <a href="concrete.pptx">PPTX</a> </li>
 	<li>Coding Projects</li>
 				 <li>Coding Project:Cartmen | <a href="https://github.com/maddieleeflang/intro/tree/main/ecs/jumpgame"<Code></a> </li>
-	 <li>Coding Project:Cartmen | <a href="https://github.com/maddieleeflang/intro/tree/main/ecs/jumpgame"<Code></a> </li>
+	 <li> Etch-A-Sketch Project | <a href="https://github.com/maddieleeflang/intro/tree/main/ecs/etchasketch"<Code></a> </li>
 	 
 			  </ul>
 	
